objects/Street_Naming_Numbering_Application__c.object
<CustomObject>
    <fields>
        <fullName>Building_Control_Application_Number__c</fullName>
        <description>The reference number of the building control application for the development</description>
        <inlineHelpText>The reference number of the building control application for the development</inlineHelpText>
        <label>Building Control Application Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description_of_Work__c</fullName>
        <description>Description of the work to be carried out</description>
        <inlineHelpText>Description of the work to be carried out</inlineHelpText>
        <label>Description of Work</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Development_Flats__c</fullName>
        <description>If there are flats at the development then a flat plan layout must have been provided.</description>
        <inlineHelpText>If there are flats at the development then a flat plan layout must have been provided.</inlineHelpText>
        <label>Flats at Development?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Development_New_Streets__c</fullName>
        <description>Whether the development involved the naming of new streets.</description>
        <inlineHelpText>Whether the development involved the naming of new streets.</inlineHelpText>
        <label>Development Involves New Streets?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Development_Street_Names__c</fullName>
        <description>The suggested unique streets names and reasoning behind them.</description>
        <inlineHelpText>The suggested unique streets names and reasoning behind them and who (related party).</inlineHelpText>
        <label>Street Name Suggestions</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Name__c</fullName>
        <description>The name of the development as used on marketing materials.</description>
        <inlineHelpText>The name of the development as used on marketing materials.</inlineHelpText>
        <label>Marketing Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Outstanding_Balance__c</fullName>
        <description>The outstanding balance for financial transactions on this record, this is generated automatically.</description>
        <inlineHelpText>The outstanding balance for financial transactions on this record, this is generated automatically.</inlineHelpText>
        <label>Outstanding Balance</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Planning_Application_Number__c</fullName>
        <description>The reference number of the planning application for the development.</description>
        <inlineHelpText>The reference number of the planning application for the development.</inlineHelpText>
        <label>Planning Application Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Property_Completion_Date__c</fullName>
        <description>When the property was purchased.</description>
        <inlineHelpText>When the property was purchased.</inlineHelpText>
        <label>Property Purchase Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_Owned__c</fullName>
        <description>Does the applicant own the property?</description>
        <inlineHelpText>Does the applicant own the property?</inlineHelpText>
        <label>Property Owned?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Property_Rented__c</fullName>
        <description>If the property is rented then a landlord's proof of agreement must be supplied.</description>
        <inlineHelpText>If the property is rented then a landlord's proof of agreement must be supplied.</inlineHelpText>
        <label>Property Rented?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Proposed_Name_1__c</fullName>
        <description>The proposed first choice for the property name.</description>
        <inlineHelpText>The proposed first choice for the property name.</inlineHelpText>
        <label>Proposed Name 1st Choice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Proposed_Name_2__c</fullName>
        <description>The alternative choice for the property name.</description>
        <inlineHelpText>The alternative choice for the property name.</inlineHelpText>
        <label>Proposed Name 2nd Choice</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Type_Dev_Name__c</fullName>
        <description>Picklist with developer names Record Type used to filter picklist Type. Do not use it in layouts.</description>
        <inlineHelpText>Picklist with developer names Record Type used to filter picklist Type. Do not use it in layouts.</inlineHelpText>
        <label>Record Type Dev Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Amendment_to_Name</fullName>
                </value>
                <value>
                    <fullName>New_Addresses</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Site_Address__c</fullName>
        <description>Free text Site Address to be used in correspondence	.</description>
        <inlineHelpText>Free text Site Address to be used in correspondence	.</inlineHelpText>
        <label>Site Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_History__c</fullName>
        <description>Store the history of statuses.</description>
        <inlineHelpText>Store the history of statuses.</inlineHelpText>
        <label>Status History</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>The status of the SN&amp;N application.</description>
        <inlineHelpText>The status of the SN&amp;N application.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New Application</fullName>
                </value>
                <value>
                    <fullName>Valid</fullName>
                </value>
                <value>
                    <fullName>Invalid</fullName>
                </value>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Application Approved</fullName>
                </value>
                <value>
                    <fullName>Application Refused</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>The type of Street Naming &amp; Numbering Application.</description>
        <inlineHelpText>The type of Street Naming &amp; Numbering Application.</inlineHelpText>
        <label>Application Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Record_Type_Dev_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Amendment to Name</fullName>
                </value>
                <value>
                    <fullName>New Addresses</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Water_Authority__c</fullName>
        <description>The Water Authority that supplies the property.</description>
        <inlineHelpText>The Water Authority that supplies the property.</inlineHelpText>
        <label>Water Authority</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <description>Application for a change to a property name or for a new postal address.</description>
    <label>Street Naming &amp; Numbering Application</label>
    <nameField>
        <displayFormat>SNN-{0000}</displayFormat>
        <label>Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Street Naming &amp; Numbering Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <recordTypes>
        <fullName>Amendment_to_Name</fullName>
        <active>true</active>
        <description>Amendments to name or addition of alias name.</description>
        <label>Amendment to Name</label>
    </recordTypes>
    <recordTypes>
        <fullName>New_Addresses</fullName>
        <active>true</active>
        <description>New postal addresses for new dwellings or commercial premises.</description>
        <label>New Addresses</label>
    </recordTypes>
    <recordTypes>
        <fullName>Other</fullName>
        <active>true</active>
        <description>Other types of Street Naming &amp; Numbering Application.</description>
        <label>Other</label>
    </recordTypes>
</CustomObject>